# angular

./: package.json  packages.bzl
adev/: angular.json
adev/shared-docs/pipeline/api-gen/entities/: BUILD.bazel  categorization.mts  traits.mts
adev/shared-docs/pipeline/api-gen/manifest/: BUILD.bazel  generate_manifest.mts
adev/shared-docs/pipeline/api-gen/rendering/: BUILD.bazel  index.mts  processing.mts  rendering.mts
adev/shared-docs/pipeline/api-gen/rendering/entities/: categorization.mts  renderables.mts
adev/shared-docs/pipeline/api-gen/rendering/templates/: class-member.tsx  class-reference.tsx  code-table-of-contents.tsx  header-api.tsx
adev/shared-docs/pipeline/api-gen/rendering/transforms/: class-transforms.mts  cli-transforms.mts  code-transforms.mts  constant-transforms.mts  decorator-transforms.mts  enum-transforms.mts  function-transforms.mts  initializer-api-functions-transform.mts  interface-transforms.mts  jsdoc-transforms.mts  member-transforms.mts  module-name.mts  params-transforms.mts  repo.mts  transformation-pipeline.mts  type-alias-transforms.mts
adev/src/app/: app.component.ts  app.config.ts
devtools/projects/ng-devtools-backend/src/lib/: client-event-subscribers.ts  component-tree.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/: render-tree.ts
goldens/public-api/animations/browser/: index.md
goldens/public-api/common/: index.md
goldens/public-api/compiler-cli/: compiler_options.api.md
goldens/public-api/forms/: index.md
vscode-ng-language-service/schemas/: tsconfig-ng.schema.json
(+2 files in other folders)
